--- a/translations/en/LC_MESSAGES/messages.po
+++ b/translations/en/LC_MESSAGES/messages.po
@@ -7,9 +7,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2016-11-19 22:39+0100\n"
-"PO-Revision-Date: 2016-11-19 21:23+0100\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"POT-Creation-Date: 2016-11-19 23:09+0100\n"
+"PO-Revision-Date: 2016-11-19 23:07+0100\n"
+"Last-Translator: \n"
 "Language: en\n"
 "Language-Team: en <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
@@ -74,6 +74,11 @@ msgid ""
 "largest part of their lives ...</p>\n"
 "                    "
 msgstr ""
+"\n"
+"                    <p>The office cleaning is very important ...</p>\n"
+"                    <p>The buro is a place where many people have the "
+"largest part of their lives ...</p>\n"
+"                    "
 
 #: templates/index.html:147
 msgid ""
@@ -218,3 +223,4 @@ msgstr ""
 #: templates/index.html:358
 msgid "Website copyright 2016"
 msgstr ""
+
